fixed bugs and add style scrollbar

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,6 +14,26 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+body::-webkit-scrollbar {
+    width: 10px; /* ширина для вертикального скролла */
+    height: 10px; /* высота для горизонтального скролла */
+    background-color: #353535;
+    
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #bbbbbb;
+    border-radius: 20px;    
+    
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #ffffff;
+   
+}
+
+
+
 /*------------------------------------------HEADER START--------------------------------------------------*/
 .header{
     // height: 400px;
